<resources>
    <string name="app_name">2048 By Maris Zeibe</string>
    <string name="start_button">Start</string>
    <string name="field_size">Field Size: %d</string>
    <string name="base_number">Starting Number: %d</string>
    <string name="score">Score: %d</string>
    <string name="end_score">Final Score: %d</string>
    <string name="game_over">GAME OVER</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="author">By Maris Zeibe</string>
    <string name="title">2048</string>
</resources>